Silly mistakes corrections

--- a/assets/common.css
+++ b/assets/common.css
@@ -14,7 +14,7 @@
     --accent-1: #FF42EC;
     --accent-2: #FF862E;
 
-    font-family: 'roc-grotesk';
+    font-family: "roc-grotesk";
     font-size: var(--base);
 }
 
@@ -145,7 +145,7 @@ h1 {
 }
 
 p {
-    font-family: 'roc-grotesk';
+    font-family: "roc-grotesk";
     color: var(--type-color);
     
     display: flex;
