--- a/page-1/style.css
+++ b/page-1/style.css
@@ -1,3 +1,48 @@
-body{
-    color: red;
+/* TYPOGRAPHY */
+
+
+details {
+    margin: 2rem 10rem;
+    padding: 2rem;
+    font-family: sans-serif;
+}
+
+details > div {
+    padding: 5rem;
+
+}
+
+
+.question {
+
+}
+
+.question > summary {
+
+}
+
+.question > div {
+
+}
+
+#question-1[open] {
+    background-color: rgb(182, 255, 250);
+}
+
+h2 {
+    font-size: var(--heading-2);
+
+    padding-top: 10rem;
+    padding-bottom: 15vh;
+    padding-left: 7vh;
+    padding-right: 7vh;
+
+    font-family: 'roc-grotesk-wide';
+    font-style: normal;
+    font-weight: 400;
+    /* font-size: 3rem; */
+    line-height: 127.6%;
+    text-align: center;
+
+    color: #FFFFFF;
 }
