--- a/assets/common.css
+++ b/assets/common.css
@@ -1,7 +1,7 @@
 /* TYPOGRAPHY */
 @font-face {
     font-family: "Ambidexter";
-    src: url("./Ambidexter_Regular.otf") format("opentype");
+    src: url("/assets/Ambidexter_Regular.otf") format("opentype");
 
     font-family:"roc-grotesk-wide";
     src:url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
@@ -80,7 +80,7 @@ body > main {
     top: 0;
     left: 0;
     width: 100%;
-    font-family: 'Ambidexter';
+    font-family: "Ambidexter";
     font-size: 2.5rem;
     color: #FFFFFF;
     background-color: black;
@@ -114,66 +114,3 @@ body > main {
     color: black;
 }
 
-/* Homepage Hero Header font & positioning */
-
-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-}
-
-header > h1{
-    padding-top: 20rem;
-    padding-bottom: 15vh;
-    padding-left: 7vh;
-    padding-right: 7vh;
-
-    font-family: 'Ambidexter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 3rem;
-    line-height: 127.6%;
-    text-align: center;
-
-    color: #FFFFFF;
-}
-
-header > p{
-    
-    padding-top: 5vh;
-    padding-bottom: 15vh;
-
-    text-align: center;
-    font-weight: 700;
-    font-size: 3rem;
-
-    color: var(--accent-2);
-}
-
-h1 {
-    font-size: var(--heading-1);
-}
-
-main > p {
-    font-family: 'roc-grotesk';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 2rem;
-    text-align: center;
-
-    color: var(--type-color);
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-
-    padding-top: 25vh;
-    padding-bottom: 15vh;
-    padding-left: 7vh;
-    padding-right: 7vh;
-   
-}
