--- a/assets/common.css
+++ b/assets/common.css
@@ -1,7 +1,10 @@
 /* TYPOGRAPHY */
 @font-face {
-    font-family: "Ambidexter";
+    font-family: "ambidexter";
     src: url("/assets/Ambidexter_Regular.otf") format("opentype");
+
+    font-family: "ambidexter";
+    src: url("/assets/FontsFree-Net-Ambidexter_Regular.ttf");
 
     font-family:"roc-grotesk-wide";
     src:url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
@@ -80,7 +83,7 @@ body > main {
     top: 0;
     left: 0;
     width: 100%;
-    font-family: "Ambidexter";
+    font-family: "ambidexter";
     font-size: 2.5rem;
     color: #FFFFFF;
     background-color: black;
