--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header > h1{
     padding-left: 7vh;
     padding-right: 7vh;
 
-    font-family: "roc-grotesk-wide";
+    font-family: "ambidexter";
     font-style: normal;
     font-weight: 400;
     font-size: 3rem;
