--- a/assets/common.css
+++ b/assets/common.css
@@ -1,15 +1,15 @@
 /* TYPOGRAPHY */
 @font-face {
-	font-family: 'ambidexter';
-	src: url('/assets/FontsFree-Net-Ambidexter_Regular.woff) format('truetype');
-	font-weight: 200, 300, 400, 450, 550, 800;
-    
+    font-family: "ambidexter";
+    src: url("/assets/FontsFree-Net-Ambidexter_Regular.woff");
+
+    /* font-family: "ambidexter"; */
+    /* src: url("/assets/FontsFree-Net-Ambidexter_Regular.ttf"); */
+
     font-family:"roc-grotesk-wide";
     src:url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/bcc24a/00000000000000007735b7c2/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
     font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
 }
-
-
 
 /*|| BASE VALUES */
 :root {
