--- a/style.css
+++ b/style.css
@@ -9,15 +9,15 @@ header {
 }
 
 header > h1{
-    padding-top: 20rem;
-    padding-bottom: 15vh;
+    padding-top: 10rem;
+    padding-bottom: 10vh;
     padding-left: 7vh;
     padding-right: 7vh;
 
     font-family: 'ambidexter', 'roc-grotesk-wide';
     font-style: normal;
     font-weight: 400;
-    font-size: 3rem;
+    font-size: var(--blog-heading);
     line-height: 127.6%;
     text-align: center;
 
@@ -25,26 +25,21 @@ header > h1{
 }
 
 header > p{
-    
-    padding-top: 5vh;
-    padding-bottom: 15vh;
+    /* padding-top: 5vh; */
+    padding: 5vh;
 
     text-align: center;
     font-weight: 700;
-    font-size: 3rem;
+    font-size: var(--blog-heading);
 
     color: var(--accent-2);
-}
-
-h1 {
-    font-size: var(--heading-1);
 }
 
 main > p {
     font-family: 'roc-grotesk';
     font-style: normal;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: var(--self-intro);
     text-align: center;
 
     color: var(--type-color);
@@ -55,9 +50,18 @@ main > p {
     flex-direction: column;
     width: 100%;
 
-    padding-top: 25vh;
-    padding-bottom: 15vh;
-    padding-left: 7vh;
-    padding-right: 7vh;
-   
+    padding-top: 10vh;
+    padding-bottom: 3vh;
+    padding-left: 3vh;
+    padding-right: 3vh; 
+}
+
+@media (min-width: 1080px) {
+    header > h1{
+        padding-top: 15rem;
+        padding-bottom: 10vh;
+        padding-left: 15vh;
+        padding-right: 15vh;
+    }
+
 }
