--- a/assets/common.css
+++ b/assets/common.css
@@ -42,7 +42,6 @@ body > main {
 }
 
 /* ARROWS */
-
 .chevron{
     position: fixed;
     bottom: 50vh;
@@ -69,19 +68,6 @@ body > main {
     background-color: var(--accent-1);
 }
 
-/* PAGE NUMBER INDICATIONS */
-.page-numbers{
-    position: fixed;
-    top: 9rem;
-    left: 0;
-    right: 0;
-    align-items: center;
-    font: var(--base);
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: space-evenly;
-    z-index: 9999;
-}
 
 
 /* Top navigation Header */
@@ -122,6 +108,48 @@ body > main {
 .topnav #scroll-top:active{
     background-color: var(--accent-2);
     color: black;
+}
+
+/* PAGE NUMBER INDICATIONS */
+.page-numbers{
+    position: fixed;
+    top: 6.5rem;
+    left: 0;
+    right: 0;
+    align-items: center;
+    font: var(--base);
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    z-index: 9999;
+}
+
+.page-indication{
+    padding: 3px 10px;
+    display: flex;
+    margin: 8px;
+    
+    color: var(--accent-1);
+    background-color: black;
+    border-radius: 2rem;
+    border: var(--accent-1) solid 1.5px;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 16px;
+    font-family:"roc-grotesk";
+    font-weight: 400;
+}
+.page-indication:hover{
+  color: var(--accent-2);
+  border: var(--accent-2) solid 1.5px;
+  background-color: black;
+}
+
+.page-indication:active{
+  color: black;
+  border: var(--accent-1) solid 1.5px;
+  background-color: var(--accent-1);
 }
 
 /*|| BOTTOM NAVIGATION */
