--- a/page-1/style.css
+++ b/page-1/style.css
@@ -1,5 +1,72 @@
-/* TYPOGRAPHY */
+/* Page 1 font & positioning */
 
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+header > h2{
+    padding-top: 11rem;
+    padding-bottom: 1vh;
+    padding-left: 7vh;
+    padding-right: 7vh;
+
+    font-family: 'roc-grotesk-wide';
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--headline);
+    text-align: center;
+
+    color: var(--accent-2);
+}
+
+header > h3{
+    padding-top: 0vh;
+    padding-bottom: 2vh;
+    padding-left: 5vh;
+    padding-right: 5vh;
+
+    font-family: 'roc-grotesk-wide';
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--sub-headline);
+    text-align: center;
+
+    color: white;
+}
+
+header > p1{
+    padding-top: 5vh;
+    padding-bottom: 2vh;
+    padding-left: 3rem;
+    padding-right: 3rem;
+
+    font-family: 'roc-grotesk';
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--author-date);
+    text-align: center;
+
+    color: var(--accent-2);
+}
+
+header > p2{
+    padding-top: 5vh;
+    padding-bottom: 2vh;
+    padding-left: 5vh;
+    padding-right: 5vh;
+
+    font-family: 'roc-grotesk';
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--quote);
+    text-align: center;
+
+    color: white;
+}
 
 details {
     margin: 2rem 10rem;
@@ -13,15 +80,15 @@ details > div {
 }
 
 
-.question {
+.questions {
 
 }
 
-.question > summary {
+.questions > summary {
 
 }
 
-.question > div {
+.questions > div {
 
 }
 
